refactor(styles/): revamp styles strucutre

--- a/styles/theme/custom/default-theme.less
+++ b/styles/theme/custom/default-theme.less
@@ -3,5 +3,5 @@
 @import '~antd/lib/style/themes/default.less';
 
 // These are shared variables that can be extracted to their own file
-@primary-color: #ff1f8a;
+@primary-color: #d11f8a;
 @border-radius-base: 4px;
