--- a/styles/theme/custom/dark-theme.less
+++ b/styles/theme/custom/dark-theme.less
@@ -2,7 +2,7 @@
 @import '~antd/dist/antd.less';
 @import '~antd/lib/style/themes/dark.less';
 
-@primary-color: #ca0060;
+@primary-color: #ff1f8a;
 @border-radius-base: 4px;
 
 //@component-background: #303030;
